--- a/Assignment2.html
+++ b/Assignment2.html
@@ -2,221 +2,110 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible"
-		content="IE=edge">
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1.0">
-	<title>
-		 Survey Form 
-	</title>
-
-	<style>
-		/* Styling the Body element 
-		i.e. Color, Font, Alignment */
-		body {
-			background-color: #05c46b;
-			font-family: Verdana;
-			text-align: center;
-		}
-
-		/* Styling the Form (Color, Padding, Shadow) */
-		form {
-			background-color: #fff;
-			max-width: 500px;
-			margin: 50px auto;
-			padding: 30px 20px;
-			box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
-		}
-
-		/* Styling form-control Class */
-		.form-control {
-			text-align: left;
-			margin-bottom: 25px;
-		}
-
-		/* Styling form-control Label */
-		.form-control label {
-			display: block;
-			margin-bottom: 10px;
-		}
-
-		/* Styling form-control input, 
-		select, textarea */
-		.form-control input,
-		.form-control select,
-		.form-control textarea {
-			border: 1px solid #777;
-			border-radius: 2px;
-			font-family: inherit;
-			padding: 10px;
-			display: block;
-			width: 95%;
-		}
-
-		/* Styling form-control Radio 
-		button and Checkbox */
-		.form-control input[type="radio"],
-		.form-control input[type="checkbox"] {
-			display: inline-block;
-			width: auto;
-		}
-
-		/* Styling Button */
-		button {
-			background-color: #05c46b;
-			border: 1px solid #777;
-			border-radius: 2px;
-			font-family: inherit;
-			font-size: 21px;
-			display: block;
-			width: 100%;
-			margin-top: 50px;
-			margin-bottom: 20px;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Survey Form</title>
 </head>
 
-<body>
-	<h1>GeeksforGeeks Survey Form</h1>
+<body style="background-color: #05c46b; font-family: Verdana; text-align: center;">
+    <h1>Keshva Tessaract Survey Form</h1>
+    <form id="form" action="submit_form.php" method="POST" style="background-color: #fff; max-width: 500px; margin: 50px auto; padding: 30px 20px; box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);">
+        <div class="form-control" style="text-align: left; margin-bottom: 25px;">
+            <label for="name" id="label-name" style="display: block; margin-bottom: 10px;">Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;">
+        </div>
 
-	<!-- Create Form -->
-	<form id="form">
+        <div class="form" style="text-align: left; margin-bottom: 25px;">
+            <label for="email" id="label-email" style="display: block; margin-bottom: 10px;">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;">
+        </div>
 
-		<!-- Details -->
-		<div class="form-control">
-			<label for="name" id="label-name">
-				Name
-			</label>
+        <div class="form" style="text-align: left; margin-bottom: 25px;">
+            <label for="age" id="label-age" style="display: block; margin-bottom: 10px;">Age</label>
+            <input type="text" id="age" name="age" placeholder="Enter your age" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;">
+        </div>
 
-			<!-- Input Type Text -->
-			<input type="text" id="name"
-				placeholder="Enter your name" />
-		</div>
+        <div class="form" style="text-align: left; margin-bottom: 25px;">
+            <label for="role" id="label-role" style="display: block; margin-bottom: 10px;">Which option best describes you?</label>
+            <select name="role" id="role" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;">
+                <option value="student">Student</option>
+                <option value="intern">Intern</option>
+                <option value="professional">Professional</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
 
-		<div class="form-control">
-			<label for="email" id="label-email">
-				Email
-			</label>
+		<div class="form" style="text-align: left; margin-bottom: 25px;">
+            <label>Would you recommend Keshva Tessaract to a friend?</label>
+			<br><br>
+            <label for="recommed-1" style="margin-right: 10px;">
+                <input type="radio" id="recommed-1" name="recommed">Yes
+            </label>
+			<br><br>
+            <label for="recommed-2" style="margin-right: 10px;">
+                <input type="radio" id="recommed-2" name="recommed">No
+            </label>
+			<br><br>
+            <label for="recommed-3">
+                <input type="radio" id="recommed-3" name="recommed">Maybe
+            </label>
+			<br>
+        </div>
 
-			<!-- Input Type Email-->
-			<input type="email" id="email"
-				placeholder="Enter your email" />
-		</div>
+        <div class="form-control" style="text-align: left; margin-bottom: 25px;">
+            <label>Languages and Frameworks known<small>(Check all that apply)</small></label>
+            <br><br>
+            <label for="inp-1" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">C
+            </label>
+			<br><br>
+            <label for="inp-2" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">C++
+            </label>
+			<br><br>
+            <label for="inp-3" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">C#
+            </label>
+			<br><br>
+            <label for="inp-4" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">Java
+            </label>
+			<br><br>
+            <label for="inp-5" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">Python
+            </label>
+			<br><br>
+            <label for="inp-6" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">JavaScript
+            </label>
+			<br><br>
+            <label for="inp-7" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">React
+            </label>
+			<br><br>
+            <label for="inp-8" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">Angular
+            </label>
+			<br><br>
+            <label for="inp-9" style="margin-right: 10px;">
+                <input type="checkbox" name="inp">Django
+            </label>
+			<br><br>
+            <label for="inp-10">
+                <input type="checkbox" name="inp">Spring
+            </label>
+			<br>
+        </div>
 
-		<div class="form-control">
-			<label for="age" id="label-age">
-				Age
-			</label>
-
-			<!-- Input Type Text -->
-			<input type="text" id="age"
-				placeholder="Enter your age" />
-		</div>
-
-		<div class="form-control">
-			<label for="role" id="label-role">
-				Which option best describes you?
-			</label>
-
-			<!-- Dropdown options -->
-			<select name="role" id="role">
-				<option value="student">Student</option>
-				<option value="intern">Intern</option>
-				<option value="professional">
-					Professional
-				</option>
-				<option value="other">Other</option>
-			</select>
-		</div>
-
-		<div class="form-control">
-			<label>
-				Would you recommend GeeksforGeeks
-				to a friend?
-			</label>
-
-			<!-- Input Type Radio Button -->
-			<label for="recommed-1">
-				<input type="radio" id="recommed-1"
-					name="recommed">Yes
-				</input>
-			</label>
-			<label for="recommed-2">
-				<input type="radio" id="recommed-2"
-					name="recommed">No
-				</input>
-			</label>
-			<label for="recommed-3">
-				<input type="radio" id="recommed-3"
-					name="recommed">Maybe
-				</input>
-			</label>
-		</div>
-
-		<div class="form-control">
-			<label>Languages and Frameworks known
-				<small>(Check all that apply)</small>
-			</label>
-			<!-- Input Type Checkbox -->
-			<label for="inp-1">
-				<input type="checkbox" name="inp">C
-				</input>
-			</label>
-			<label for="inp-2">
-				<input type="checkbox" name="inp">C++
-				</input>
-			</label>
-			<label for="inp-3">
-				<input type="checkbox" name="inp">C#
-				</input>
-			</label>
-			<label for="inp-4">
-				<input type="checkbox" name="inp">Java
-				</input>
-			</label>
-			<label for="inp-5">
-				<input type="checkbox" name="inp">Python
-				</input>
-			</label>
-			<label for="inp-6">
-				<input type="checkbox" name="inp">JavaScript
-				</input>
-			</label>
-			<label for="inp-7">
-				<input type="checkbox" name="inp">React
-				</input>
-			</label>
-			<label for="inp-7">
-				<input type="checkbox" name="inp">Angular
-				</input>
-			</label>
-			<label for="inp-7">
-				<input type="checkbox" name="inp">Django
-				</input>
-			</label>
-			<label for="inp-7">
-				<input type="checkbox" name="inp">Spring
-				</input>
-			</label>
-		</div>
-
-		<div class="form-control">
-			<label for="comment">
-				Any comments or suggestions
-			</label>
-
-			<!-- multi-line text input control -->
-			<textarea name="comment" id="comment"
-					placeholder="Enter your comment here">
-			</textarea>
-		</div>
-
-		<!-- Multi-line Text Input Control -->
-		<button type="submit" value="submit">
-			Submit
-		</button>
-	</form>
+        <div class="form-control" style="text-align: left; margin-bottom: 25px;">
+            <label for="comment">Any comments or suggestions</label>
+            <textarea name="comment" id="comment" placeholder="Enter your comment here" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;"></textarea>
+        </div>
+        <button type="submit" value="submit" style="background-color: #05c46b; border: 1px solid #777; border-radius: 2px; font-family: inherit; font-size: 21px; display: block; width: 100%; margin-top: 50px; margin-bottom: 20px;">Submit</button>
+    </form>
 </body>
 
 </html>
+
+
