--- a/Assignment2.html
+++ b/Assignment2.html
@@ -10,7 +10,7 @@
 
 <body style="background-color: #05c46b; font-family: Verdana; text-align: center;">
     <h1>Keshva Tessaract Survey Form</h1>
-    <form id="form" action="submit_form.php" method="POST" style="background-color: #fff; max-width: 500px; margin: 50px auto; padding: 30px 20px; box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);">
+    <form id="form"style="background-color: #fff; max-width: 500px; margin: 50px auto; padding: 30px 20px; box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);">
         <div class="form-control" style="text-align: left; margin-bottom: 25px;">
             <label for="name" id="label-name" style="display: block; margin-bottom: 10px;">Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" style="border: 1px solid #777; border-radius: 2px; font-family: inherit; padding: 10px; display: block; width: 95%;">
